--- a/data-analytics-ue20cs312/test.ipynb
+++ b/data-analytics-ue20cs312/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4 2016-01-08  1145.64  1149.96  1120.93  1122.88  52138900"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "<AxesSubplot:xlabel='Date', ylabel='Volume'>"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "4 2016-01-08  1145.64  1149.96  1120.93  1122.88  52138900"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,28 +412,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "09:50:14 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "09:50:14 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "09:50:14 - cmdstanpy - ERROR - Chain [1] error: error during processing Communication error on send\n",
+      "09:57:11 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "09:57:11 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "09:57:11 - cmdstanpy - ERROR - Chain [1] error: error during processing Communication error on send\n",
       "Optimization terminated abnormally. Falling back to Newton.\n",
-      "09:50:14 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "09:50:21 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "09:57:11 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "09:57:18 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<prophet.forecaster.Prophet at 0x7fcffe7a0b90>"
+       "<prophet.forecaster.Prophet at 0x7fcffe9a7850>"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,17 +443,18 @@
     "import prophet as pr\n",
     "model= pr.Prophet()\n",
     "model.add_regressor('Open',standardize=False)\n",
+    "\n",
     "model.add_regressor('High',standardize=False)\n",
     "model.add_regressor('Low',standardize=False)\n",
-    "model.\n",
-    "model.add_regressor('Volume',standardize=False)\n",
     "\n",
+    "model.add_regressor('Volume',standardize=False)\n",
+    "model.make_all_seasonality_features(df)\n",
     "model.fit(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +545,7 @@
        "4 2016-01-08  1145.64  1149.96  1120.93  1122.88  52138900"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -617,8 +618,8 @@
        "      <th>0</th>\n",
        "      <td>2016-01-04</td>\n",
        "      <td>1250.004484</td>\n",
-       "      <td>1094.137723</td>\n",
-       "      <td>1114.659176</td>\n",
+       "      <td>1094.346020</td>\n",
+       "      <td>1114.402511</td>\n",
        "      <td>1250.004484</td>\n",
        "      <td>1250.004484</td>\n",
        "      <td>904.222606</td>\n",
@@ -641,8 +642,8 @@
        "      <th>1</th>\n",
        "      <td>2016-01-05</td>\n",
        "      <td>1250.001079</td>\n",
-       "      <td>1114.300312</td>\n",
-       "      <td>1135.032266</td>\n",
+       "      <td>1114.414933</td>\n",
+       "      <td>1134.834298</td>\n",
        "      <td>1250.001079</td>\n",
        "      <td>1250.001079</td>\n",
        "      <td>920.357373</td>\n",
@@ -665,8 +666,8 @@
        "      <th>2</th>\n",
        "      <td>2016-01-06</td>\n",
        "      <td>1249.997673</td>\n",
-       "      <td>1123.517255</td>\n",
-       "      <td>1144.767639</td>\n",
+       "      <td>1123.563558</td>\n",
+       "      <td>1144.728789</td>\n",
        "      <td>1249.997673</td>\n",
        "      <td>1249.997673</td>\n",
        "      <td>926.959439</td>\n",
@@ -689,8 +690,8 @@
        "      <th>3</th>\n",
        "      <td>2016-01-07</td>\n",
        "      <td>1249.994268</td>\n",
-       "      <td>1131.550430</td>\n",
-       "      <td>1151.920037</td>\n",
+       "      <td>1131.504244</td>\n",
+       "      <td>1152.060488</td>\n",
        "      <td>1249.994268</td>\n",
        "      <td>1249.994268</td>\n",
        "      <td>935.979279</td>\n",
@@ -713,8 +714,8 @@
        "      <th>4</th>\n",
        "      <td>2016-01-08</td>\n",
        "      <td>1249.990862</td>\n",
-       "      <td>1119.356501</td>\n",
-       "      <td>1139.857318</td>\n",
+       "      <td>1119.507146</td>\n",
+       "      <td>1140.333680</td>\n",
        "      <td>1249.990862</td>\n",
        "      <td>1249.990862</td>\n",
        "      <td>936.142091</td>\n",
@@ -740,11 +741,11 @@
       ],
       "text/plain": [
        "          ds        trend   yhat_lower   yhat_upper  trend_lower  trend_upper  \\\n",
-       "0 2016-01-04  1250.004484  1094.137723  1114.659176  1250.004484  1250.004484   \n",
-       "1 2016-01-05  1250.001079  1114.300312  1135.032266  1250.001079  1250.001079   \n",
-       "2 2016-01-06  1249.997673  1123.517255  1144.767639  1249.997673  1249.997673   \n",
-       "3 2016-01-07  1249.994268  1131.550430  1151.920037  1249.994268  1249.994268   \n",
-       "4 2016-01-08  1249.990862  1119.356501  1139.857318  1249.990862  1249.990862   \n",
+       "0 2016-01-04  1250.004484  1094.346020  1114.402511  1250.004484  1250.004484   \n",
+       "1 2016-01-05  1250.001079  1114.414933  1134.834298  1250.001079  1250.001079   \n",
+       "2 2016-01-06  1249.997673  1123.563558  1144.728789  1249.997673  1249.997673   \n",
+       "3 2016-01-07  1249.994268  1131.504244  1152.060488  1249.994268  1249.994268   \n",
+       "4 2016-01-08  1249.990862  1119.507146  1140.333680  1249.990862  1249.990862   \n",
        "\n",
        "         High  High_lower  High_upper         Low  ...       weekly  \\\n",
        "0  904.222606  904.222606  904.222606  938.609367  ... -1248.167455   \n",
@@ -777,7 +778,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +865,7 @@
        "4 2016-01-08  1129.745263"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +982,7 @@
        "4  1129.745263 2016-01-08  1145.64  1149.96  1120.93  1122.88  52138900"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1002,7 @@
        "<AxesSubplot:xlabel='ds', ylabel='y'>"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1029,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1115,7 @@
        "4 2022-08-05  2414.66  2444.17  2409.01  18912400"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1248,7 @@
        "4  2436.602833 2022-08-05  2414.66  2444.17  2409.01  18912400"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1335,7 @@
        "4 2022-08-05  2436.602833"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1434,7 @@
        "4 2022-08-05  2436.602833"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
